bugfix: headings get hidden under the navbar when navigated via links

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -6,6 +6,7 @@
 
 html{
   scroll-behavior: smooth;
+  scroll-padding-top: 120px;
 }
 
 body {
